# PMCloud

./: Dockerfile  PMCloud.drawio  README.md  app.config.ts  app.vue  compose.yaml  error.vue  nuxt.config.ts  package-lock.json  package.json
assets/css/: common.styl  default.styl
components/: footer.vue  header.vue
components/inputs/: InputInForm.vue
composables/: fetchApi.ts  validators.ts
layouts/: app.vue  default.vue  noscroll.vue
middleware/: root_server_only.ts
pages/: about.vue  index.vue  overview.vue  pricing.vue  signin.vue  signup.vue
pmcloud_back/: Cargo.toml  Dockerfile
pmcloud_back/migrations/0-setup/: down.sql  up.sql
pmcloud_back/src/: grouping_strategy.rs  main.rs
pmcloud_back/src/api/auth/: signin.rs  signup.rs  status.rs
pmcloud_back/src/database/: auth_token.rs  database.rs  group.rs  hierarchy.rs  picture.rs  schema.rs  tags.rs  user.rs
pmcloud_back/src/ftp_server/: ftp.rs  ftp_auth.rs  ftp_backed.rs  ftp_backend.rs  mod.rs
pmcloud_back/src/mailing/: mailer.rs
pmcloud_back/src/mailing/templates/: base.html  confirm_signup.html  footer.html  header.html
pmcloud_back/src/utils/: auth.rs  errors_catcher.rs  mailer.rs  utils.rs  validation.rs
stores/: user.ts
