[package]
name = "pmcloud_back"
version = "0.1.0"
edition = "2021"


[dependencies]
async-trait = "0.1.50"
libunftp = "=0.18.8"
rocket = { version = "0.5.0", features = ["json"] }
tracing-attributes = "0.1.27"
tokio = "1.36.0"
diesel = { version = "2.1.4", features = ["mysql_backend", "mysql", "r2d2", ] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
diesel-derive-enum = { version = "2.1.0", festures = ["mysql"] }
time = { version = "0.3.34", features = ["macros"] }
bigdecimal = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
