[package]
name = "pmcloud_back"
version = "0.1.0"
edition = "2021"


[dependencies]
async-trait = "0.1.50"
libunftp = "=0.18.8"
rocket = { version = "0.5.0", features = ["json"] }
tracing-attributes = "0.1.27"
tokio = "1.36.0"
diesel = { version = "2.1.4", git = "https://github.com/diesel-rs/diesel.git", features = ["mysql_backend", "mysql", "r2d2", "chrono"] }
diesel_derives = "2.1.2"
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
rand = "0.8.5"
diesel-derive-enum = { version = "2.1.0", features = ["mysql"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = { version = "0.5", default-features = false, features = ["serde"] }
bigdecimal = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.17.0", features = ["derive"] }
hex = "0.4.3"
pwhash = "1"
user-agent-parser = { version = "0.3.6", features = ["rocket"] }
enum-kinds = "0.5.1"
